# feodorov-sqc-lab1

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gauss.c  main.c
.github/workflows/: cmake.yml
include/: gauss.h
test/: CMakeLists.txt  tests.cc
